--- a/bib.html
+++ b/bib.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Publications</title>
+<title>Tapajit Dey: Publications</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="vCard template project">
@@ -25,11 +25,8 @@
 				<ul class="d-flex flex-row align-items-center justify-content-start">
 					<li><a href="index.html">About</a></li>
 					<li><a href="skills.html">Skills</a></li>
-					<!-- <li><a href="services.html">Services</a></li> -->
 					<li><a href="experience.html">Experience</a></li>
 					<li><a href="education.html">Education</a></li>
-					<!-- <li><a href="portfolio.html">Portfolio</a></li> -->
-					<!-- <li><a href="testimonials.html">Testimonials</a></li> -->
 					<li class="active"><a href="bib.html">Publications</a></li>
 				</ul>
 				<div class="header_button ml-auto">
@@ -45,11 +42,8 @@
 				<ul>
 					<li><a href="index.html">About</a></li>
 					<li><a href="skills.html">Skills</a></li>
-					<!-- <li><a href="services.html">Services</a></li> -->
 					<li><a href="experience.html">Experience</a></li>
 					<li><a href="education.html">Education</a></li>
-					<!-- <li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="testimonials.html">Testimonials</a></li> -->
 					<li><a href="bib.html">Publications</a></li>
 				</ul>
 			</div>
@@ -75,7 +69,7 @@
 				<div class="general_info_content">
 					<div class="general_info_content_inner mCustomScrollbar" data-mcs-theme="minimal-dark">
 						<div class="general_info_title">Researcher </div>&nbsp;
-						<div class="general_info_text">Emipirical Software Engineering <span>.</span> Data Science </div>&nbsp;
+						<div class="general_info_text">Empirical Software Engineering <span>.</span> Data Science </div>&nbsp;
 						<div class="general_info_text"><i class='fa fa-at fa-lg' > </i> tdey2@vols.utk.edu <span>,</span> tapjdey@gmail.com </div>
 						<!-- Social -->
 						<div class="social_container">
