--- a/education.html
+++ b/education.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Education</title>
+<title>Tapajit Dey: Education</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="vCard template project">
@@ -25,11 +25,8 @@
 				<ul class="d-flex flex-row align-items-center justify-content-start">
 					<li><a href="index.html">About</a></li>
 					<li><a href="skills.html">Skills</a></li>
-					<!-- <li><a href="services.html">Services</a></li> -->
 					<li><a href="experience.html">Experience</a></li>
 					<li class="active"><a href="education.html">Education</a></li>
-					<!-- <li><a href="portfolio.html">Portfolio</a></li> -->
-					<!-- <li><a href="testimonials.html">Testimonials</a></li> -->
 					<li><a href="bib.html">Publications</a></li>
 				</ul>
 				<div class="header_button ml-auto">
@@ -45,11 +42,8 @@
 				<ul>
 					<li><a href="index.html">About</a></li>
 					<li><a href="skills.html">Skills</a></li>
-					<!-- <li><a href="services.html">Services</a></li> -->
 					<li><a href="experience.html">Experience</a></li>
 					<li><a href="education.html">Education</a></li>
-					<!-- <li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="testimonials.html">Testimonials</a></li> -->
 					<li><a href="bib.html">Publications</a></li>
 				</ul>
 			</div>
@@ -75,7 +69,7 @@
 				<div class="general_info_content">
 					<div class="general_info_content_inner mCustomScrollbar" data-mcs-theme="minimal-dark">
 						<div class="general_info_title">Researcher </div>&nbsp;
-						<div class="general_info_text">Emipirical Software Engineering <span>.</span> Data Science </div>&nbsp;
+						<div class="general_info_text">Empirical Software Engineering <span>.</span> Data Science </div>&nbsp;
 						<div class="general_info_text"><i class='fa fa-at fa-lg' > </i> tdey2@vols.utk.edu <span>,</span> tapjdey@gmail.com </div>
 						<!-- Social -->
 						<div class="social_container">
@@ -179,7 +173,7 @@
 		</div>
 <div align='center'>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tapajit Dey All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 
 	</div>
