--- a/index.html
+++ b/index.html
@@ -25,11 +25,8 @@
 				<ul class="d-flex flex-row align-items-center justify-content-start">
 					<li class="active"><a href="index.html">About</a></li>
 					<li><a href="skills.html">Skills</a></li>
-					<!-- <li><a href="services.html">Services</a></li> -->
 					<li><a href="experience.html">Experience</a></li>
 					<li><a href="education.html">Education</a></li>
-					<!-- <li><a href="portfolio.html">Portfolio</a></li> -->
-					<!-- <li><a href="testimonials.html">Testimonials</a></li> -->
 					<li><a href="bib.html">Publications</a></li>
 				</ul>
 				<div class="header_button ml-auto">
@@ -75,7 +72,7 @@
 				<div class="general_info_content">
 					<div class="general_info_content_inner mCustomScrollbar" data-mcs-theme="minimal-dark">
 						<div class="general_info_title">Researcher </div>&nbsp;
-						<div class="general_info_text">Emipirical Software Engineering <span>.</span> Data Science </div>&nbsp;
+						<div class="general_info_text">Empirical Software Engineering <span>.</span> Data Science </div>&nbsp;
 						<div class="general_info_text"><i class='fa fa-at fa-lg' > </i> tdey2@vols.utk.edu <span>,</span> tapjdey@gmail.com </div>
 						<!-- Social -->
 						<div class="social_container">
@@ -160,7 +157,7 @@
 							<div class="loader_container">
 								<div class="loader" data-perc="0.95"></div>
 								<div class="loader_content text-center">
-									<div class="loader_title"> focussed</div>
+									<div class="loader_title"> focused</div>
 									<div class="loader_subtitle">Motivated by Impact<br> Diligent, Keen<br> on the "Big Picture"</div>
 								</div>
 							</div>
@@ -176,7 +173,7 @@
 	</div>
 <div align='center'>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tapajit Dey All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 
 </div>
